# digit-recognition-nn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
ModelData/: config.json  database.txt  emnistDOWN.py  emnist_config.json  hebrew_db.py  mnist_db_extractor.py  model.txt  modelData.txt  process_file.py
include/: painter.hpp  transformation.hpp
src/: abc_digit_recognition.cpp  consts.hpp  digit_recognition.cpp  main.cpp  painter.cpp  painter.hpp  tran.cu  transformation.cpp
